styles/mobile.css
@media (max-width: 720px), (max-height: 720px) {

    * {
        margin: 0; padding: 0;
    }

    body {
        height: 100%;
    }

    .button-grid {
        padding: 20px;
        background-color: rgba(0,0,0,0);
        border: none;
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 8px;
        text-decoration: none;
    }

    .button-grid:hover {
        background-color: rgba(255, 255, 255, 0.05); 
    }

    .button-grid:active {
        background-color: rgba(255, 255, 255, 0.01); 
    }

    .button-grid:not(:last-child) {
        border-right: solid 1px rgb(60, 60, 60);
    }

    .button-grid-text {
        display: none;
    }

    .app {
        width: 100%;
        height: 100%;
        background-color: rgba(36, 36, 36, 0.9);
        border-radius: 0px;
        border: none;
        box-shadow: none;
        transition: transform 0.3s ease-in-out;
        height: 100dvh;
    }

    .box-image {
        display: grid;
        grid-template-columns: 1fr;
        gap: 6px;
        margin: 20px 0 20px 0;
    }

    .content {
        max-height: none;
        overflow-y: visible;  
    }

    .full-image {
        display: grid;
        grid-template-columns: 1fr;
        gap: 6px;
        margin: 20px 0 20px 0;
        list-style: none;
    }

    .box-image-inline {
        display: grid;
        grid-template-columns: 1fr;
        gap: 6px;
        margin: 20px 0 20px 0;
    }

}

